--- a/index.HTML
+++ b/index.HTML
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tabela de Dados</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <title>Exemplo DataTables</title>
+    <link rel="stylesheet" type="text/css" href="DataTables/datatables.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://github.dev/RudneyC/testenovo/blob/main/data.csv"/>
 </head>
 <body>
-	<div class="container">
-		<h1>Tabela de Dados</h1>
-		<table id="myTable" class="table table-striped table-bordered">
-			<thead>
-				<tr>
-					<th>Coluna 1</th>
-					<th>Coluna 2</th>
-					<th>Coluna 3</th>
-					<th>Coluna 4</th>
-					<th>Coluna 5</th>
-				</tr>
-			</thead>
-			<tbody>
-			</tbody>
-		</table>
-	</div>
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
-	<script src="script.js"></script>
+    <table id="myTable" class="display" style="width:100%">
+        <thead>
+            <tr>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+
+    <script type="text/javascript" src="jquery-3.6.4.min.js"></script>
+    <script type="text/javascript" src="DataTables/datatables.min.js"></script>
+    <script type="text/javascript" src="papaparse.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $.get("data.csv", function(data) {
+                var parsedData = Papa.parse(data, {header: true});
+                var columns = Object.keys(parsedData.data[0]);
+                var tableColumns = columns.map(function(col) {
+                    return {title: col, data: col};
+                });
+                var tableData = parsedData.data.map(function(row) {
+                    return columns.map(function(col) {
+                        return row[col];
+                    });
+                });
+
+                $('#myTable').DataTable({
+                    data: tableData,
+                    columns: tableColumns
+                });
+            });
+        });
+    </script>
 </body>
 </html>
