--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Tabela Dinâmica</title>
-	<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tabela Dinâmica</title>
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-	<input type="file" id="fileInput" onchange="loadFile()">
-	<div id="tableContainer"></div>
-
-	<script>
-		function loadFile() {
-			var file = document.getElementById('fileInput').files[0];
-			var reader = new FileReader();
-			reader.onload = function(event) {
-				var data = new Uint8Array(event.target.result);
-				var workbook = XLSX.read(data, {type: 'array'});
-
-				var html = XLSX.utils.sheet_to_html(workbook.Sheets[workbook.SheetNames[0]]);
-				document.getElementById('tableContainer').innerHTML = html;
-			};
-			reader.readAsArrayBuffer(file);
-		}
-	</script>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="text-center">Tabela Dinâmica</h1>
+                <hr>
+                <div class="table-responsive">
+                    <table class="table table-striped table-hover">
+                        <thead id="table-head">
+                            <!-- Cabeçalho da tabela gerado dinamicamente -->
+                        </thead>
+                        <tbody id="table-body">
+                            <!-- Corpo da tabela gerado dinamicamente -->
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
